crates/aura-macros/tests/boundaries/weak_identifier_on_function.rs
#[aura_macros::weak_identifier(domain = "invitation")]
fn invalid_target() {}

fn main() {}
